--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,13 +1,4 @@
-<div class="download_container flex">
-    <div *ngFor="let ar of fetchArtifactDetails">
-        <mat-card class="artifact_card">
-            <mat-card-title> {{ar.deviceName}} </mat-card-title>
-            <mat-card-subtitle> Version : {{ar.buildVersion}} </mat-card-subtitle>
-            <mat-card-subtitle> Maintainer : {{ar.maintainer}} </mat-card-subtitle>
-            <ul class="save_btn"> 
-                <li><a href="{{ar.downloadLink}}"> <mat-icon>download</mat-icon></a></li>
-            </ul>
-        </mat-card>
-    </div>
+<div class="container">
+  <p>Code in progress</p>
 </div>
-<br><br>
+
