--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,9 @@
-<mat-toolbar class="footer">
-    <span class="copyright">Copyright © 2020-2021 The PixelPlusUI Project. All rights reserved.</span>
-</mat-toolbar>
+<footer class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">      
+            <p class="copyright">
+                Copyright © 2020-2021 The PixelPlusUI Project. All rights reserved.
+            </p>
+        </div>
+    </div>  
+ </footer>
