--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,13 +1,5 @@
-.footer{
+footer{
     background-color:black;
     color: #ec2020;
-    padding: 0 45px;
-    height: auto;
-    bottom: 0 !important;
-    justify-content: center;
-    position: fixed;
 }
-.footer .copyright{
-    font-size: 12px;
-    font-weight: 500;
-}
+.copyright{ margin-top: 0.5rem;}
