--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home_container">
     <div class="left_panel">
-        <p class="para_one">Another custom ROM, <br> and we like it.</p> <br>
+        <p class="para_one">Another custom ROM, and we like it.</p> <br>
         <p class="para_two">PixelPlusUI is a PE based ROM with some more friendly user experience. What different in this? you ask? LET'S FIND OUT. <br><br>
             It has a beautilful UI/UX while preserving the stock Android look by adhering to Material Design guidelines and offers great performance and stability with many awesome features and user security. But this doesn't mean our aim is to provide all the customisation available on the planet. Unlike OEMs' slow and untimely updates, we closely follow Google to bring the latest updates to our users.
         </p>
@@ -96,3 +96,4 @@
         </mat-card>
     </div>
 </div>
+<app-footer></app-footer>
