--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -1,9 +1,20 @@
-.galary_container{
-    padding: 2rem 0 3rem 7rem;
-    display: flex;
-    width: fit-content !important;
+@media only screen and (min-width: 992px){
+    .galary_container{
+        padding: 2rem 0 3rem 0;
+        width: fit-content !important;
+    }
+    .carousel{ display: flex; }
+    .galary_container img{
+        height: 40rem;
+        width: 19rem;
+    }
 }
-.galary_container img{
-    height: 30rem;
-    width: 16rem;
+@media only screen and (max-width: 600px){
+    .galary_container{
+        padding: 2rem 0 3rem 7rem;
+        width: fit-content !important;
+    }
+    .galary_container img{
+        width: 20rem;
+    }
 }
