--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
 html, body { height: 100%; }
@@ -6,7 +5,7 @@ body {
     background-color: #0a0a0a;
     color: white;
     margin: 0; 
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
 .filler{ flex: 1 1 auto; }
 .flex{ 
@@ -17,4 +16,3 @@ body {
 .carousel-item{ text-align: center;}
 .mat-expansion-panel{ background: unset;}
 .mat-expansion-indicator, .mat-expansion-indicator::after{ color: white; font-size: large; }
-
