download component changes, css optimization

--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -1,5 +1,5 @@
-<div class="changelog_container">
-    <p class="changelog_label">PixelPlusUI - All Version Update Changelogs </p>
+<div class="container_with_accordion">
+    <p class="page_label">PixelPlusUI - All Version Update Changelogs </p>
     <mat-accordion *ngFor="let ch of changeLogDetails"> 
         <mat-expansion-panel class="expansion_container">
             <mat-expansion-panel-header class="expansion_header">
