--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,12 +1,12 @@
 <div class="contact_container">
-    <p class="contact_label">Connect with us here</p>
+    <p class="contact_label text_center">Connect with us here</p>
     <div class="contact_card">
-        <mat-card class="telegram_card">
+        <mat-card class="telegram_card text_center">
             <mat-card-title>Telegram</mat-card-title>
             <mat-card-subtitle>Group  : <a href="https://t.me/ppuichat"> https://t.me/ppuichat </a> </mat-card-subtitle>
             <mat-card-subtitle>Channel  : <a href="https://t.me/ppuich"> https://t.me/ppuich </a> </mat-card-subtitle>
         </mat-card>
-        <mat-card class="email_card">
+        <mat-card class="email_card text_center">
             <mat-card-title>E-mail address</mat-card-title>
             <mat-card-subtitle> Kostyajrz : <a href="https://kostyajrzaws@gmail.com"> kostyajrzaws@gmail.com </a> </mat-card-subtitle>
             <mat-card-subtitle> Saurav : <a href="https://dwarmachine24@gmail.com"> dwarmachine24@gmail.com </a> </mat-card-subtitle>
