--- a/src/app/donate/donate.component.html
+++ b/src/app/donate/donate.component.html
@@ -1,4 +1,4 @@
-<div class="donate_container">
+<div class="donate_container text_center">
     <span class="label">Donate Here</span>
     <div class="flex">
         <mat-card>
