--- a/src/app/donate/donate.component.scss
+++ b/src/app/donate/donate.component.scss
@@ -1,7 +1,6 @@
-.donate_container{ text-align: center; }
 .label{ 
-    color: #ec2020;
-    font-size: xx-large;
+    color: #fff;
+    font-size: x-large;
     font-weight: 500;
     text-transform: uppercase;
 }
