--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,31 @@ body {
     flex-flow: wrap; 
 }
 
-.carousel-item{ text-align: center;}
+                // Changelog & Download styles
+
+.container_with_accordion{
+    align-items: center;
+    justify-content: center;
+  }
+.page_label{ 
+    text-transform: uppercase;
+    font-size: large;
+    font-weight: 500; 
+    text-align: center;
+    margin: 2rem !important;
+}
+.expansion_header, .expansion_header:hover{
+    height: 4rem;
+    background: rgb(204,66,69) !important;
+    background: linear-gradient(90deg, rgba(204,66,69,1) 0%, rgba(9,9,9,1) 75%) !important;
+}
+.expansion_header mat-panel-title{ 
+    color: white; 
+    font-size: large; 
+}
 .mat-expansion-panel{ background: unset;}
 .mat-expansion-indicator, .mat-expansion-indicator::after{ color: white; font-size: large; }
+
+
+                // Shared style
+.carousel-item, .text_center{ text-align: center;}
