--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,7 @@
     display: flex;
     width: 100%;
 }
-.left_panel, .right_panel{
-    width: 50%;
-    text-align: center;
-}
+.left_panel, .right_panel{ width: 50%; }
 .left_panel .para_one{ 
     font-weight: 500;
     color: #ec2020;
@@ -26,6 +23,7 @@
         font-size: large; 
         width: 32rem; 
         margin-left: 10rem ;
+        margin-top: 2rem;
     }
     .right_panel img{ width: 250px; }
 }
@@ -46,7 +44,6 @@
     margin: 1rem;
     height: 13rem;
     border-radius: 25px;
-    text-align: center;
     background-color: white;
 }
 .feature_card mat-card-title{
@@ -73,10 +70,7 @@
 }
 
                     // Team container
-.team_card{
-    text-align: center;
-    border-radius: 25px;
-}
+.team_card{ border-radius: 25px; }
 .team_card .avatar{ 
     height: 100px;
     border-radius: 50%;
@@ -111,7 +105,6 @@
 .download_card, .donate_card{
     height: 17rem;
     padding: 30px;
-    text-align: center;
     line-height: 1.5;
     border-radius: 40px;
     background-color: #fff;
@@ -156,7 +149,6 @@
     text-transform: uppercase;
     font-size: xx-large;
     font-weight: 500; 
-    text-align: center;
     color: #ec2020;
     margin-bottom: 2rem;
 }
